[package]
name = "bandersnatch_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
ark-vrf = { version = "0.1.0", features = ["ring", "bandersnatch"] }
once_cell = "1.18.0"

[dev-dependencies]
hex = "0.4"

[profile.release]
opt-level = 3
lto = false       # Disabled to avoid LLVM version mismatch on older systems
codegen-units = 1 # Single codegen unit for better optimization
panic = "abort"   # Smaller binary, faster execution
strip = true      # Remove debug symbols
